--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -35,6 +35,7 @@
       const search = new URLSearchParams(window.location.search);
       const year = search.get("year");
       const fileName = search.get("fileName");
+      const person = search.get("person");
 
       const img = new Image();
 
@@ -61,7 +62,7 @@
           document.getElementById("h1PhotoYear").textContent = year;
         }, 25);
       };
-      img.src = `srcMedia/${fileName}`;
+      img.src = `${person}SrcMedia/${fileName}`;
     </script>
   </body>
 </html>
